--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "prettier": "^2.6.1",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
