--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node -r esm app.js",
-    "dev": "nodemon -r esm app.js",
-    "test": "jest"
+    "start": "env-cmd -f ./config/dev.env node -r esm index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon -r esm index.js",
+    "test": "env-cmd -f ./config/test.env jest --coverage --verbose"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +30,7 @@
     "@babel/core": "^7.17.8",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
