--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,19 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
+    "*.{js,tsx}": [
+        "./node_modules/.bin/eslint --fix",
+        "git add"
+    ],
+    "*.{js, jsx, json, html, css}": [
+        "./node_modules/.bin/prettier --write",
+        "git add"
     ]
   },
   "scripts": {
@@ -26,13 +36,6 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint --fix src/**/*.js"
-    
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint:fix",
-      "pre-push": "npm run lint"
-    }
   },
   "eslintConfig": {
     "extends": [
