--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "history": "^5.3.0",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.1",
     "prop-types": "^15.8.1",
